Add minimal svelte UI
